--- a/models/index.html
+++ b/models/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/styles.css">
-  <title>Currency Conversion CRUD</title>
+  <title>Currency Conversion</title>
 </head>
 <body>
-  <h1>Currency Conversion CRUD</h1>
+  <h1>Currency Conversion</h1>
   <div id="app"></div>
   <script src="/js/app.js"></script>
 </body>
