--- a/F/index.html
+++ b/F/index.html
@@ -33,3 +33,6 @@
 
           </div>
       </div>
+      <div class="metrics-grid">
+        <div class="metric-card total-revenue">
+            <div class="metric-icon">
