--- a/F/index.html
+++ b/F/index.html
@@ -36,3 +36,12 @@
       <div class="metrics-grid">
         <div class="metric-card total-revenue">
             <div class="metric-icon">
+
+              <i class="fas fa-dollar-sign"></i>
+                </div>
+                <div class="metric-content">
+                    <h3>Total Revenue</h3>
+                    <p class="metric-value"><span id="totalRevenue">0</span></p>
+
+                </div>
+            </div>
