--- a/F/index.html
+++ b/F/index.html
@@ -45,3 +45,14 @@
 
                 </div>
             </div>
+            <div class="metric-card total-clients">
+              <div class="metric-icon">
+                  <i class="fas fa-users"></i>
+              </div>
+              <div class="metric-content">
+                  <h3>Total Clients</h3>
+                  <p class="metric-value"><span id="totalClients">0</span></p>
+
+              </div>
+          </div>
+
