--- a/F/index.html
+++ b/F/index.html
@@ -55,4 +55,13 @@
 
               </div>
           </div>
+          <div class="metric-card active-projects">
+            <div class="metric-icon">
+                <i class="fas fa-tasks"></i>
+            </div>
+            <div class="metric-content">
+                <h3>Total Projects</h3>
+                <p class="metric-value"><span id="totalProjects">0</span></p>
 
+            </div>
+        </div>
