--- a/F/index.html
+++ b/F/index.html
@@ -65,6 +65,29 @@
 
             </div>
         </div>
-      </body>
+
+        <div class="metric-card completed-projects">
+          <div class="metric-icon">
+              <i class="fas fa-check-circle"></i>
+          </div>
+          <div class="metric-content">
+              <h3>Completed Projects</h3>
+              <p class="metric-value"><span id="completedProjects">0</span></p>
+
+          </div>
+      </div>
+  </div>
+
+  <div class="recent-activity">
+      <h2>History</h2>
+      <div class="activity-list" id="activityList">
+
+      </div>
+  </div>
+</div>
+
+<script src="dashboard.js"></script>
+
+ </body>
 
       </html>
