--- a/F/login.html
+++ b/F/login.html
@@ -10,3 +10,40 @@
         <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     </head>
+
+    <body>
+        <div id="authScreen" class="screen auth-screen active">
+            <div class="auth-container">
+                <div class="auth-logo">
+                    <h1>Client Management</h1>
+                </div>
+            </div>
+            <div class="auth-form">
+                <div class="input-group">
+                    <label for="emailInput">Email address</label>
+                    <input type="email" id="emailInput" placeholder="Enter your email">
+                </div>
+                <div class="input-group password-group">
+                    <label for="passwordInput">Password</label>
+                    <div class="password-input-wrapper">
+                        <input type="password" id="passwordInput" placeholder="Enter your password">
+                        <button type="button" class="password-toggle" aria-label="Toggle password visibility">
+                            <i class="fas fa-eye"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="auth-buttons">
+                    <button id="continueButton" class="auth-button primary">Continue to App</button>
+                </div>
+            </div>
+        </div>
+        <div id="loadingOverlay" class="loading-overlay">
+            <div class="loading-spinner">
+                <div class="spinner-circle"></div>
+                <div class="spinner-text">Please wait...</div>
+            </div>
+        </div>
+    </div>
+    <script src="login.js"></script>
+</body>
+</html>
