--- a/F/Clist.html
+++ b/F/Clist.html
@@ -195,6 +195,14 @@
     </style>
 </head>
 <body>
+    <div id="app">
+        <div class="header-container">
+            <h1>All Clients</h1>
+            <div>
+                <button onclick="exportToExcel()" class="export-btn">Export to Excel</button>
+                <a href="index.html" class="back-button">Back to Dashboard</a>
+            </div>
+        </div>
 
 
 </body>
