--- a/F/Clist.html
+++ b/F/Clist.html
@@ -203,6 +203,15 @@
                 <a href="index.html" class="back-button">Back to Dashboard</a>
             </div>
         </div>
-
+        <div class="filters-section">
+            <h2>Filters</h2>
+            <div class="filters-grid">
+                <button data-filter="all" class="filter-btn active">All Project Types</button>
+                <button data-filter="web" class="filter-btn">Web Development</button>
+                <button data-filter="mobile" class="filter-btn">Mobile Development</button>
+                <button data-filter="desktop" class="filter-btn">Desktop Software</button>
+                <button data-filter="cloud" class="filter-btn">Cloud Solutions</button>
+            </div>
+        </div>
 
 </body>
