--- a/F/Clist.html
+++ b/F/Clist.html
@@ -213,5 +213,8 @@
                 <button data-filter="cloud" class="filter-btn">Cloud Solutions</button>
             </div>
         </div>
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Search by client name or contact person...">
+        </div>
 
 </body>
