--- a/F/Clist.html
+++ b/F/Clist.html
@@ -216,5 +216,56 @@
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Search by client name or contact person...">
         </div>
+        <div id="tableView" class="table-container">
+        </div>
+    </div>
 
+    <div id="editDialog" class="modal">
+        <div class="modal-content">
+            <h2>Edit Client</h2>
+            <form id="editForm">
+                <div class="form-group">
+                    <label for="editName">Name:</label>
+                    <input type="text" id="editName" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="editContact">Contact Person:</label>
+                    <input type="text" id="editContact" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="editType">Project Type:</label>
+                    <select id="editType" required>
+                        <option value="Web Development">Web Development</option>
+                        <option value="Mobile Development">Mobile Development</option>
+                        <option value="Desktop Software">Desktop Software</option>
+                        <option value="Cloud Solutions">Cloud Solutions</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="editBudget">Budget:</label>
+                    <input type="number" id="editBudget" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="editStartDate">Starting Date:</label>
+                    <input type="date" id="editStartDate" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="editDeadline">Deadline:</label>
+                    <input type="date" id="editDeadline" required>
+                </div>
+
+                <div class="modal-actions">
+                    <button type="button" onclick="closeEditDialog()">Cancel</button>
+                    <button type="button" id="saveChanges">Save Changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="clients-list.js"></script>
 </body>
